--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+colorama==0.4.4
 colored==1.4.3
 logzero==1.7.0
 numpy==1.22.2
@@ -9,3 +10,4 @@ PyQt5==5.15.6
 pySecureCryptos==0.46
 tinydb==4.6.1
 tinydb-encrypted-jsonstorage==0.1.2
+pyqtgraph==0.12.3
