--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+altgraph==0.17.2
+cffi==1.15.0
 colorama==0.4.4
 colored==1.4.3
+cryptography==35.0.0
+future==0.18.2
 logzero==1.7.0
 numpy==1.22.2
+onetimepad==1.4
+pefile==2021.9.3
+pycparser==2.21
 pycryptodome==3.14.1
 pycryptodomex==3.11.0
 pyfiglet==0.8.post1
+pyftplib==1.5.6
+pyinstaller==4.10
+pyinstaller-hooks-contrib==2022.3
 pyperclip==1.8.2
-PyQt5==5.15.6
+pyqtgraph==0.12.3
 pySecureCryptos==0.46
+PySide6==6.3.0
+PySide6-Addons==6.3.0
+PySide6-Essentials==6.3.0
+pywin32-ctypes==0.2.0
+scipy==1.8.0
+shiboken6==6.3.0
 tinydb==4.6.1
 tinydb-encrypted-jsonstorage==0.1.2
-pyqtgraph==0.12.3
